--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 Solution</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	
+	<h1>Our Menu</h1>
+	<div class="container">
+		<section class="s1">
+			<h3>Chicken</h3>
+			We don't read and write poetry because it's cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering -these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love -- these are what we stay alive for.
+		</section>
+		<section class="s2">
+			<h3>Beef</h3>
+			We don't read and write poetry because it's cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering -these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love -- these are what we stay alive for.
+		</section>
+		<section class="s3">
+			<h3>Sushi</h3>
+			We don't read and write poetry because it's cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering -these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love -- these are what we stay alive for.
+		</section>
+	</div>
 </body>
 </html>
