--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -17,13 +17,13 @@
 		</div>
 		<div class="menu-list menu-list-2">
 			<section>
-				<h3>Chicken</h3>
+				<h3>Beef</h3>
 				<p>We don't read and write poetry because it's cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering -these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love -- these are what we stay alive for.</p>
 			</section>
 		</div>
 		<div class="menu-list menu-list-3">
 			<section>
-				<h3>Chicken</h3>
+				<h3>Sushi</h3>
 				<p>We don't read and write poetry because it's cute. We read and write poetry because we are members of the human race. And the human race is filled with passion. And medicine, law, business, engineering -these are noble pursuits and necessary to sustain life. But poetry, beauty, romance, love -- these are what we stay alive for.</p>
 			</section>
 		</div>
