finish main page

--- a/website/index.html
+++ b/website/index.html
@@ -30,6 +30,7 @@
 
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
+						<!-- Three lines in the button -->
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -56,15 +57,67 @@
 						</li>							
 					</ul>
 				</div>
-
-				<div id="main-content" class="container">
-					
-				</div>
 			</div>
 		</nav>
 	</header>
 
+	<div id="call-btn" class="visible-xs">
+    <a class="btn" href="tel:410-602-5008">
+    <span class="glyphicon glyphicon-earphone"></span>
+    410-602-5008
+    </a>
+  </div>
+  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
+	<div id="main-content" class="container">
+		<div class="jumbotron">
+			<img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
+		</div>
+
+		<div id="home-tiles" class="row">
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<a href="menu-category.html"><div id="menu-tile"><span>menu</span></div></a>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+			</div>
+			<div class="col-md-4 col-sm-12 col-xs-12">
+				<a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635833,-76.7138622,17z/data=!3m1!4b1!4m5!3m4!1s0x89c81a14e7817803:0xab20a0e99daa17ea!8m2!3d39.3635833!4d-76.7116735" target="_blank">
+					<div id="map-tile">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6755555641876!2d-76.71386218466478!3d39.36358327950145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1szh-CN!2s!4v1462797944438" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<span>map</span>
+					</div>
+				</a>
+			</div> 
+		</div> <!-- End #home-tiles -->		
+	</div> <!-- End #main-content -->
+
+	<footer class="panel-footer">
+		<div class="container">
+			<div class="row">
+				<section id="hours" class="col-sm-4">
+					<span>Hours:</span><br />
+					Sun-Thurs: 11:15am - 10:00pm<br />
+					Fri: 11:15am - 2:30pm<br />
+					Saturday Closed
+					<hr class="visible-xs">
+				</section>
+				<section id="address" class="col-sm-4">
+					<span>Address:</span><br />
+					7105 Reisterstown Road<br />
+					Baltimore, MD 21215<br />
+					<p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+					<hr class="visible-xs">
+				</section>
+				<section id="testimonials" class="col-sm-4">
+				<p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+				<p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+					<hr class="visible-xs">
+				</section>
+			</div> <!-- End of row -->
+			<div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+		</div>
+	</footer>
 	<!-- Js import -->
 	<script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
