--- a/website/index.html
+++ b/website/index.html
@@ -8,8 +8,8 @@
 	<title>David Chu's China Bistro</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='https://fonts.useso.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.useso.com/css?family=Lora' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.useso.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.useso.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
